// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kiŋe siːz ðə wʊlhe",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔgez siː ðə wʊlhez",
    },
    {
      "english": "i give you the bread",
      "target": "aje gɪveɪŋe ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kiŋe wɔkeɪŋez æte ðə ɹivəɹe",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kiŋe nate siːz ðə wʊlhe",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ɾege βideɾet lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kakane βideɾent lulupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego daɾeo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "ɾege ambulat flume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ɾege non βideɾet lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "niminimi lukiː soːweli",
    },
    {
      "english": "the dogs see the wolves",
      "target": "soːsoːweli lukiː soːsoːweli",
    },
    {
      "english": "i give you the bread",
      "target": "mi paːnaː sina",
    },
    {
      "english": "the king walks at the river",
      "target": "niminimi taːwaːtawo saːki telosuːnoː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "niminimi ala lukiː soːweli",
    },
  ],
  "preset": "tokipona",
}
`;
